--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,35 @@
-flask
-flask-sqlalchemy
-flask-security
-email-validator
-mysqlclient
-flask-marshmallow
-bcrypt
-pytz
+Babel==2.12.1
+bcrypt==4.0.1
+blinker==1.6.1
+cffi==1.15.1
+click==8.1.3
+colorama==0.4.6
+cryptography==40.0.1
+dnspython==2.3.0
+email-validator==1.3.1
+Flask==2.2.3
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+flask-marshmallow==0.15.0
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+greenlet==2.0.2
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+marshmallow==3.19.0
+mysqlclient==2.1.1
+packaging==23.0
+passlib==1.7.4
+pycparser==2.21
+PyMySQL==1.0.3
+pytz==2023.3
+speaklater==1.3
+SQLAlchemy==2.0.9
+typing_extensions==4.5.0
+Werkzeug==2.2.3
+WTForms==3.0.1
